# GeometryViewer

./: BaseLocator.cpp  BaseLocator.h  CMakeLists.txt  ClippingPlane.cpp  ClippingPlaneLocator.cpp  ClippingPlaneLocator.h  FlashlightLocator.cpp  FlashlightLocator.h  GeometryViewer.cpp  GeometryViewer.h  Lighting.cpp  Lighting.h  README.md  RGBAColor.cpp  SwatchesWidget.cpp  VruiVTK.cpp  VruiVTK.h  gvApplicationState.cpp  gvApplicationState.h  gvContextState.cpp  gvContextState.h  index.html  main.cpp  params.json
config/: VRDevices.cfg  Vrui.cfg
