CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(POLICY CMP0020)
  CMAKE_POLICY(SET CMP0020 NEW)
ENDIF()

PROJECT(VruiVTK)

INCLUDE(FindPkgConfig)

IF(NOT VRUI_PKGCONFIG)
  FIND_PATH(VRUI_PKGCONFIG Vrui.pc)
  IF(NOT VRUI_PKGCONFIG)
    MESSAGE(FATAL_ERROR "Please provide path to 'pkgconfig' dir for Vrui")
  ENDIF()
ENDIF()
SET(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:${VRUI_PKGCONFIG}")

PKG_SEARCH_MODULE(VRUI REQUIRED Vrui-3.1 Vrui)
STRING(REPLACE "-framework;" "-framework" VRUI_LDFLAGS "${VRUI_LDFLAGS}")
ADD_DEFINITIONS(${VRUI_CFLAGS})

# Find VTK
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

IF(NOT TCLAP_INCLUDE_DIR)
  FIND_PATH(TCLAP_INCLUDE_DIR tclap/CmdLine.h)
  IF(NOT TCLAP_INCLUDE_DIR)
    MESSAGE(FATAL_ERROR "Please provide path to 'tclap' include dir")
  ENDIF()
ENDIF()

INCLUDE_DIRECTORIES(${TCLAP_INCLUDE_DIR})

SET(${PROJECT_NAME}_SRCS
  main.cpp
  VruiVTK.cpp
  VruiVTK.h
  )

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VTK_LIBRARIES} ${VRUI_LDFLAGS})
