CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

IF(POLICY CMP0020)
  CMAKE_POLICY(SET CMP0020 NEW)
ENDIF()

PROJECT(VruiVTK)

SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

INCLUDE(FindPkgConfig)

IF(NOT VRUI_PKGCONFIG)
  FIND_PATH(VRUI_PKGCONFIG Vrui.pc)
  IF(NOT VRUI_PKGCONFIG)
    MESSAGE(FATAL_ERROR "Please provide path to 'pkgconfig' dir for Vrui")
  ENDIF()
ENDIF()
SET(ENV{PKG_CONFIG_PATH} "$ENV{PKG_CONFIG_PATH}:${VRUI_PKGCONFIG}")

PKG_SEARCH_MODULE(VRUI REQUIRED Vrui>=3000000)
STRING(REPLACE "-framework;" "-framework " VRUI_LDFLAGS "${VRUI_LDFLAGS}")
ADD_DEFINITIONS(${VRUI_CFLAGS})

# Find VTK
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${VTK_USE_FILE})

SET(${PROJECT_NAME}_SRCS
  BaseLocator.cpp
  BaseLocator.h
  ClippingPlane.cpp
  ClippingPlane.h
  ClippingPlaneLocator.cpp
  ClippingPlaneLocator.h
  main.cpp
  VruiVTK.cpp
  VruiVTK.h
  )

ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SRCS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${VTK_LIBRARIES} "${VRUI_LDFLAGS}")

INSTALL(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib
  )
